fix: 가변 리스트 변경